--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
 # OpenAI API Key for GPT
-OPENAI_API_KEY=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
+
+OPENAI_API_KEY= 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
